--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Young women -- Juvenile fiction'
 - !lcsh 'Houseboats -- Juvenile fiction'
 - !lcsh 'Friendship -- Juvenile fiction'
+- GITenberg
 title: Madge Morton, Captain of the Merry Maid
 url: http://www.gutenberg.org/ebooks/16253
